Add: html and css styles of main-product-detail section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <section class="main-exchange__tables-container">
                 <div class="currecy">
                     <div class="currecy__table-container">
-                        <table class="currecy__table">
+                        <table class="currecy__table" id="currecy__table">
                             <h3 class="currecy__title">Monedas</h3>
                             <tr>
                                 <td class="currecy__table--left currecy__table--top-left">Bitcoin</td>
@@ -79,7 +79,35 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="main-product-detail__logo"></span>
+            <div class="main-product-detail__info">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="main-product-detail__card-container" >
+                <article class="main-product-detail__card">
+                    <span class="main-product-detail__card-icon main-product-detail__card-icon--clock"></span>
+                    <p class="main-product-detail__card-title">Tiempo real</p>
+                    <p class="main-product-detail__card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="main-product-detail__card">
+                    <span class="main-product-detail__card-icon main-product-detail__card-icon--eye"></span>
+                    <p class="main-product-detail__card-title">No hay tasas escondidas</p>
+                    <p class="main-product-detail__card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="main-product-detail__card">
+                    <span class="main-product-detail__card-icon main-product-detail__card-icon--dollar"></span>
+                    <p class="main-product-detail__card-title">Compara monedas</p>
+                    <p class="main-product-detail__card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="main-product-detail__card">
+                    <span class="main-product-detail__card-icon main-product-detail__card-icon--check"></span>
+                    <p class="main-product-detail__card-title">Información confiable</p>
+                    <p class="main-product-detail__card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
