--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 </article>
             </section>
         </section>
-        <section></section>
+        <section class="main-bitcoin-img">
+            <h2>Conócelo hoy.</h2>
+        </section>
         <section></section>
     </main>
     <footer></footer>
