Add: html and css styles of main-plans section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header__button">Conoce Nuestros Planes<span></span></a>
+            <a href="#plans" class="header__button">Conoce Nuestros Planes<span></span></a>
         </div>
     </header>
     <main>
@@ -111,7 +111,41 @@
         <section class="main-bitcoin-img">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans">
+            <div class="main-plans__title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="main-plans__cards-container">
+                <article class="main-plans__card">
+                    <div class="main-plans__card-info">
+                        <h3 class="card-info__title">Pago Trimestral</h3>
+                        <p class="card-info__price"><sup>$</sup> 40</p>
+                        <p class="card-info__saving">*Ahorras $17 comparado al plan mensual.</p>
+                        <button class="card-info__button--blue">Escoger este<span></span></button>
+                    </div>
+                </article>
+                <article class="main-plans__card">
+                    <span class="main-plans__left-arrow"></span>
+                    <p class="main-plans__card-recommended">Recomendado</p>
+                    <div class="main-plans__card-info">
+                        <h3 class="card-info__title">Pago Anual</h3>
+                        <p class="card-info__price"><sup>$</sup> 99</p>
+                        <p class="card-info__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="card-info__button--orange">Escoger este<span></span></button>
+                    </div>
+                    <span class="main-plans__right-arrow"></span>
+                </article>
+                <article class="main-plans__card">
+                    <div class="main-plans__card-info">
+                        <h3 class="card-info__title">Pago Semestral</h3>
+                        <p class="card-info__price"><sup>$</sup> 65</p>
+                        <p class="card-info__saving">*Ahorras $49 comparado al plan mensual.</p>
+                        <button class="card-info__button--blue">Escoger este<span></span></button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
