Add: html and css styles of footer

--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <section class="footer__left-content">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="footer__rigth-content">
+            <img src="./public/images/logo-footer.svg" alt="Logo de Batatabit 2020">
+        </section>
+    </footer>
 </body>
 </html>
